--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,8 @@
   "Тестовый пример": "Example test",
   "Перевод": "translate",
   "Язык": "English",
-  "('Страница не найдена')": "('Page not found')"
+  "('Страница не найдена')": "('Page not found')",
+  "('Произошла непредвиденная ошибка')": "('An unexpected error has occurred')",
+  "('Обновить страницу')": "('Update page')",
+  "('throw error')": "('throw error')"
 }
