--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "('Страница не найдена')": "('Page not found')",
   "('Произошла непредвиденная ошибка')": "('An unexpected error has occurred')",
   "('Обновить страницу')": "('Update page')",
-  "('throw error')": "('throw error')"
+  "('throw error')": "('throw error')",
+  "('Переключить')": "('Переключить')"
 }
