--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "('Произошла непредвиденная ошибка')": "('An unexpected error has occurred')",
   "('Обновить страницу')": "('Update page')",
   "('throw error')": "('throw error')",
-  "('Переключить')": "('Переключить')"
+  "('Переключить')": "('Переключить')",
+  "('О сайте')": "('О сайте')",
+  "('Главная')": "('Главная')"
 }
