--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "('Произошла непредвиденная ошибка')": "('Произошла непредвиденная ошибка')",
   "('Обновить страницу')": "('Обновить страницу')",
   "('throw error')": "('запустить ошибку')",
-  "('Переключить')": "('Переключить')"
+  "('Переключить')": "('Переключить')",
+  "('О сайте')": "('О сайте')",
+  "('Главная')": "('Главная')"
 }
