--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,7 @@
   "('throw error')": "('запустить ошибку')",
   "('Переключить')": "('Переключить')",
   "('О сайте')": "('О сайте')",
-  "('Главная')": "('Главная')"
+  "('Главная')": "('Главная')",
+  " ": " ",
+  "Короткий язык": "Ру"
 }
